[project]
name = "jungledisk-cli"
version = "0.1.0"
description = "CLI tool for listing files in JungleDisk S3 buckets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "base64io>=1.0.3",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "scrypt>=0.8.0",
]

[project.scripts]
jungledisk = "jungledisk_cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"